# enterprise-agentic-ai-playbook

./: .env.example  .gitignore  README.md  README_AGENT.md  config.py  example_usage.py  main.py  mcp_client.py  pyproject.toml  requirements.txt  stock_analyst_agent.py
docs/: 01-executive-summary.md  02-core-concepts.md  03-reference-architecture.md  04-design-patterns.md  05-agentops.md  06-evaluation-reliability.md  07-security-governance.md  08-future-roadmap.md
docs/01-executive-summary/: 01-01-the-shift.md  01-02-spectrum-of-automation.md  01-03-strategic-comparison.md
docs/02-core-concepts/: 02-01-anatomy-of-agent.md  02-02-connectivity-standardization.md
docs/03-reference-architecture/: 03-01-infrastructure-layer.md  03-02-data-layer.md  03-03-model-layer.md  03-04-core-agentic-layer.md  03-05-application-layer.md
docs/04-design-patterns/: 04-01-single-agent-architectures.md  04-02-multi-agent-interaction-patterns.md  04-03-context-engineering.md
docs/05-agentops/: 05-01-development-frameworks.md  05-02-mcp-development.md  05-03-agent-templates.md
